tests/fail/ownership/move-via-let-decl.rs
let mut x:&mut String = "hello";
let y = x
let z = x // Invalid